Fixed security issue with traversal attack. Worked on alignement on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,7 +84,13 @@ a.card-link-no-style, .card-link-no-style a {
 
 .NormalText {
     font-family: 'Raleway', sans-serif;
-    font-size: 20px;
+    /* font-size: 20px; */
+}
+
+.align_title_and_search {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .gradient_ruler {
